force-app/main/default/objects/Apttus_Config2__ProductAttributeTypeMember__c/Apttus_Config2__ProductAttributeTypeMember__c.object-meta.xml
<CustomObject>
    <description>Represents the association between a product and an attribute type.</description>
    <label>Product Attribute Type Member</label>
    <nameField>
        <displayFormat>AT-{0000000000}</displayFormat>
        <label>AttributeType Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attribute Type Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>