force-app/main/default/objects/Apttus_Config2__ProductAttributeTypeMember__c/fields/Apttus_Config2__AttributeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AttributeId__c</fullName>
    <description>ID of the attribute to which this type is associated</description>
    <inlineHelpText>ID of the attribute to which this type is associated</inlineHelpText>
    <label>Attribute</label>
    <referenceTo>Apttus_Config2__ProductAttribute__c</referenceTo>
    <relationshipLabel>Attribute Types</relationshipLabel>
    <relationshipName>AttributeTypes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>