force-app/main/default/objects/Apttus_Config2__ProductAttributeTypeMember__c/fields/Apttus_Config2__AttributeType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AttributeType__c</fullName>
    <description>The product attribute type</description>
    <inlineHelpText>The product attribute type</inlineHelpText>
    <label>Attribute Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>