force-app/main/default/objects/Apttus_Config2__ProductAttributeTypeMember__c/fields/Apttus_Config2__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product associated with the attribute type</description>
    <inlineHelpText>ID of the product associated with the attribute type</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Attribute Types</relationshipLabel>
    <relationshipName>AttributeTypes</relationshipName>
    <type>Lookup</type>
</CustomField>